--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "git:add": "git add -A .",
+    "git:commit": "npm run git:add && git commit -m \".\"",
+    "git:push": "git push origin master",
+    "git:publish": "npm run git:commit && npm run git:push"
   },
   "author": "",
   "license": "ISC",
