--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^1.2.0",
     "gulp-inject": "^4.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
