--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "bootstrap": "^4.0.0-beta",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
-    "material-components-web": "^0.17.0",
     "popper.js": "^1.11.0"
   },
   "devDependencies": {
@@ -27,9 +26,11 @@
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^1.2.0",
     "gulp-inject": "^4.2.0",
+    "gulp-minify": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-token-replace": "^1.0.4",
     "gulp-uglify": "^3.0.0"
   }
 }
